--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rustup@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          override: true
-
-      - name: Add Windows target (x86_64-pc-windows-gnu)
-        run: rustup target add x86_64-pc-windows-gnu
+          target: x86_64-pc-windows-gnu
 
       - name: Install mingw-w64 (for GNU target)
         if: runner.os == 'Linux'
